--- a/package.json
+++ b/package.json
@@ -3,6 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  
+    "builds": [
+      {
+        "src": "./app.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "./app.js",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+          "Access-Control-Allow-Origin": "*"
+        }
+      }
+    ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
