--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,6 @@
-{ "version": 2, "builds":[{"src":"/","use":"@vercel/node"}],"routes":[{"src":"/(.*)","dest":"/"}]}
+{"version":2,
+"builds":[{"use":"@vercel/node"}],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
+}
