--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     }
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build":"netlify deploy --prod"
+
   },
   "author": "",
   "license": "ISC",
@@ -38,6 +39,9 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
+    "netlify-cli":"^12.7.2",
+    "netlify-lambda":"^2.0.15",
+    "serverless-http":"^2.7.0",
     "fast-csv": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
