--- a/package.json
+++ b/package.json
@@ -3,32 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "builds": [
-    {
-      "src": "./app.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "./app.js",
-      "methods": [
-        "GET",
-        "POST",
-        "PUT",
-        "DELETE",
-        "PATCH",
-        "OPTIONS"
-      ],
-      "headers": {
-        "Access-Control-Allow-Origin": "*"
-      }
-    }
-  ],
   "scripts": {
-    "build":"netlify deploy --prod"
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -39,9 +15,6 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
-    "netlify-cli":"^12.7.2",
-    "netlify-lambda":"^2.0.15",
-    "serverless-http":"^2.7.0",
     "fast-csv": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
